@@ -1,3 +1,4 @@
+* Allow UoM conversion between different categories
 * Add product identifiers
 
 Version 5.2.0 - 2019-05-06
